--- a/assets/style.css
+++ b/assets/style.css
@@ -58,6 +58,22 @@
 	height: 25px;
 }
 
+#loadingScreen {
+  position:fixed;
+  top:0px;
+  left:0px;
+  background: rgba(0,0,0,0.5);
+  width:100%;
+  height:100%;
+}
+
+#loadingindicator {
+   
+   position: absolute;
+   top: 50%;
+   margin-top: -50px;
+}
+
 
 .glyphicon {
 	position: absolute;	
