edited style things, created safety info modal so no separate safety info screen now, styled hotel info boxes, made book flight and make reservations link to expedia for now

--- a/assets/style.css
+++ b/assets/style.css
@@ -103,5 +103,33 @@
 	left: 80%;
 }
 
+.modal-content {
+	width: 85%;
+	position: relative;
+	top: 30%;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.modal-body * {
+	position: relative;
+	left: %;
+}
+
+#modal-button {
+	width: 200px;
+}
+
+.modal-dialog {
+	height: 100%;
+}
+
+.centered {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 50%;
+	transform: translateX(-50%);
+}
 
 
