--- a/assets/style.css
+++ b/assets/style.css
@@ -75,7 +75,7 @@
 }
 
 
-.glyphicon {
+.glyphicon-search {
 	position: absolute;	
 	top: 22%;
 	right: 5%;
@@ -130,6 +130,21 @@
 	transform: translateY(-50%);
 	left: 50%;
 	transform: translateX(-50%);
+}
+
+#date-container {
+	position: relative;
+	width: 340px;
+	display: inline-block;
+	left: 30%;
+	margin: auto 0;
+	top: 180px;
+}
+
+#datepicker, #datepicker2 {
+	width: 110px;
+	border-radius: 5px;
+	border: 0px solid;
 }
 
 
